--- a/css/main.css
+++ b/css/main.css
@@ -309,9 +309,10 @@ body {
 .responsive {
   width: 20%;
   height: auto;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
+  float: left;
 }
 
 
